package headfirst.designpatterns.abstractfactory;

public interface Cheese {
	public String toString();
}
