package headfirst.designpatterns.abstractfactory;

public interface Clams {
	public String toString();
}
