package headfirst.designpatterns.abstractfactory;

public interface Dough {
	public String toString();
}
