package headfirst.designpatterns.abstractfactory;

public interface Sauce {
	public String toString();
}
