@startuml

interface PizzaIngredientFactory{
    createDough()
    createSauce()
    createCheese()
    createVeggies()
    createPepperoni()
    createClam()
}

class NYPizzaIngredientFactory{
        createDough()
        createSauce()
        createCheese()
        createVeggies()
        createPepperoni()
        createClam()
}

class ChicagoPizzaIngredientFactory{
        createDough()
        createSauce()
        createCheese()
        createVeggies()
        createPepperoni()
        createClam()
}

PizzaIngredientFactory <|.. NYPizzaIngredientFactory
PizzaIngredientFactory <|.. ChicagoPizzaIngredientFactory

class NYPizzaStore{
    createPizza()
}

NYPizzaStore --> NYPizzaIngredientFactory

interface Dough
interface Sauce
interface Cheese
interface Clams

class ThickCrustDough
class ThinCrustDough
Dough <|.. ThickCrustDough
Dough <|.. ThinCrustDough

class PlumTomatoSauce
class MarinaraSauce
Sauce <|.. PlumTomatoSauce
Sauce <|.. MarinaraSauce

class MozzarellaCheese
class ReggianoCheese
Cheese <|.. ReggianoCheese
Cheese <|.. MozzarellaCheese

class FrozenClams
class FreshClams
Clams <|.. FrozenClams
Clams <|.. FreshClams

NYPizzaStore --> Dough
NYPizzaStore --> Sauce
NYPizzaStore --> Cheese
NYPizzaStore --> Clams

NYPizzaIngredientFactory --> ThinCrustDough
NYPizzaIngredientFactory --> MarinaraSauce
NYPizzaIngredientFactory --> ReggianoCheese
NYPizzaIngredientFactory --> FreshClams

ChicagoPizzaIngredientFactory --> ThickCrustDough
ChicagoPizzaIngredientFactory --> PlumTomatoSauce
ChicagoPizzaIngredientFactory --> MozzarellaCheese
ChicagoPizzaIngredientFactory --> FrozenClams




@enduml